@@ -3,6 +3,8 @@ Changelog
 
 1.7 - (unreleased)
 -----------------
+ * Bug fix: Now "relatedItems" values are kept when creating a
+     new Specification version [ghicaale #3582]
  * Change: Moved the Manager id edit field to the general metadata area. Small editorial changes. [demarant #3548]
  * Bug fix: Tests fixed after changing product name [ghicaale]
  * Feature: Use new filtering select widget for provider_url and dataset_url [tiberich #3530]
